Fixed add device button being overlapped by footer (fixes #1950)

--- a/gui/assets/css/overrides.css
+++ b/gui/assets/css/overrides.css
@@ -245,7 +245,7 @@ ul.three-columns li, ul.two-columns li {
 
 /** Footer nav on small devices **/
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
     body {
         padding-bottom: 0;
     }
